--- a/instagram/main.html
+++ b/instagram/main.html
@@ -301,8 +301,8 @@
                 <span class="material material-icons-outlined">explore</span>
                 <span class="material material-icons-outlined">favorite_border</span>
                 <span class="material" onclick="window.location.href='detail.html'"><img class="profile-img"
-                                            style="width: 25px; height: 25px;border-radius: 70%; overflow: hidden; margin-bottom: 5px;"
-                                            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSYpbowW30Eqd3-vKmmnJ-BwV3cGUAlAyP0CTsIi8NQlK5rOHB1wUQGGG0ZQraedyi0ql4&usqp=CAU"></span>
+                                                                                         style="width: 25px; height: 25px;border-radius: 70%; overflow: hidden; margin-bottom: 5px;"
+                                                                                         src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSYpbowW30Eqd3-vKmmnJ-BwV3cGUAlAyP0CTsIi8NQlK5rOHB1wUQGGG0ZQraedyi0ql4&usqp=CAU"></span>
             </div>
         </div>
     </div>
@@ -310,7 +310,7 @@
 <!-- 네비게이션바 끝-->
 <!-- 바디 영역-->
 <div class="main-body">
-    <!-- 좌측 피드영역-->
+    <!--좌측 피드영역-->
     <div class="left-body">
         <div class="border feed-box">
             <div class="feed-name">
@@ -321,112 +321,112 @@
                     </div>
                     <span class="feed-name-text"> m_nvely </span>
                 </div>
-                <div>
-                    <!-- 피드박스 우측상단 ...버튼-->
-                    <div class="dotdotdot">
-                        <button type="button"
-                                style="margin: auto; color: black; height: 30px; background-color: transparent; border: 0px;"
-                                class="btn btn-primary" data-toggle="modal"
-                                data-target="#exampleModal">
-                            <span class="material-symbols-outlined" style="cursor: pointer; padding-bottom: 30px;">more_horiz</span>
-                        </button>
-                    </div>
-                    <!-- Modal -->
-                    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog"
-                         aria-labelledby="exampleModalLabel"
-                         aria-hidden="true">
-                        <div class="modal-dialog" style="background-color: transparent" role="document">
-                            <div class="modal-body" style="padding-top: 300px;">
-                                <button type="button"
-                                        style="border:1px solid lightgrey ; width: 410px; height: 50px; color: crimson; border-top-left-radius: 20px; border-top-right-radius: 20px;">
-                                    <b>신고</b></button>
-                                <button type="button"
-                                        style="border:1px solid lightgrey ; width: 410px; height: 50px;color: crimson;">
-                                    <b>팔로우 취소</b></button>
-                                <button type="button" style="border:1px solid lightgrey ; width: 410px; height: 50px;">
-                                    게시물로 이동
-                                </button>
-                                <button type="button" style="border:1px solid lightgrey ; width: 410px; height: 50px;">
-                                    공유 대상...
-                                </button>
-                                <button type="button" style="border:1px solid lightgrey ; width: 410px; height: 50px;">
-                                    링크 복사
-                                </button>
-                                <button type="button" style="border:1px solid lightgrey ; width: 410px; height: 50px;">
-                                    퍼가기
-                                </button>
-                                <button type="button"
-                                        style="border:1px solid lightgrey ; width: 410px; height: 50px; border-bottom-left-radius: 20px; border-bottom-right-radius: 20px;">
-                                    취소
-                                </button>
-                            </div>
+                <!-- 피드박스 우측상단 ...버튼-->
+                <div class="dotdotdot">
+                    <button type="button"
+                            style="margin: auto; color: black; height: 30px; background-color: transparent; border: 0px;"
+                            class="btn btn-primary" data-toggle="modal"
+                            data-target="#exampleModal">
+                        <span class="material-symbols-outlined" style="cursor: pointer; padding-bottom: 30px;">more_horiz</span>
+                    </button>
+                </div>
+                <!-- Modal -->
+                <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog"
+                     aria-labelledby="exampleModalLabel"
+                     aria-hidden="true">
+                    <div class="modal-dialog" style="background-color: transparent" role="document">
+                        <div class="modal-body" style="padding-top: 300px;">
+                            <button type="button"
+                                    style="border:1px solid lightgrey ; width: 410px; height: 50px; color: crimson; border-top-left-radius: 20px; border-top-right-radius: 20px;">
+                                <b>신고</b></button>
+                            <button type="button"
+                                    style="border:1px solid lightgrey ; width: 410px; height: 50px;color: crimson;">
+                                <b>팔로우 취소</b></button>
+                            <button type="button" style="border:1px solid lightgrey ; width: 410px; height: 50px;">
+                                게시물로 이동
+                            </button>
+                            <button type="button" style="border:1px solid lightgrey ; width: 410px; height: 50px;">
+                                공유 대상...
+                            </button>
+                            <button type="button" style="border:1px solid lightgrey ; width: 410px; height: 50px;">
+                                링크 복사
+                            </button>
+                            <button type="button" style="border:1px solid lightgrey ; width: 410px; height: 50px;">
+                                퍼가기
+                            </button>
+                            <button type="button"
+                                    style="border:1px solid lightgrey ; width: 410px; height: 50px; border-bottom-left-radius: 20px; border-bottom-right-radius: 20px;">
+                                취소
+                            </button>
                         </div>
                     </div>
                 </div>
             </div>
-            <div>
-                <!--                 carousel 기능 / carousel 자동넘김멈춤기능-->
-                <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" data-interval="false">
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img class="feed-img"
-                                 src="https://images.mypetlife.co.kr/content/uploads/2021/10/22152410/IMG_2087-scaled-e1634883900174-1024x739.jpg"
-                                 class="d-block w-100" alt="...">
-                        </div>
-                        <div class="carousel-item">
-                            <img class="feed-img"
-                                 src="http://www.songjs.com/files/attach/images/1800/667/459/7b1715231faf21abeca83cdfae628c78.jpg"
-                                 class="d-block w-100" alt="...">
-                        </div>
-                        <div class="carousel-item">
-                            <img class="feed-img"
-                                 src="https://images.mypetlife.co.kr/content/uploads/2021/12/06142637/sehee-park-473fli-b_Mo-unsplash-scaled-768x1024-2-edited.jpg"
-                                 class="d-block w-100" alt="...">
-                        </div>
+            <!--                 carousel 기능 / carousel 자동넘김멈춤기능-->
+            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" data-interval="false">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img class="feed-img"
+                             src="https://images.mypetlife.co.kr/content/uploads/2021/10/22152410/IMG_2087-scaled-e1634883900174-1024x739.jpg"
+                             class="d-block w-100" alt="...">
                     </div>
-                    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
-                </div>
-                <!--                피드 아이콘-->
-                <div class="feed-icon">
-                    <div>
-                        <span class="material-feed material-icons-outlined">favorite_border</span>
-                        <span class="material-feed material-icons-outlined">mode_comment</span>
-                        <span class="material-feed material-icons-outlined">near_me</span>
+                    <div class="carousel-item">
+                        <img class="feed-img"
+                             src="http://www.songjs.com/files/attach/images/1800/667/459/7b1715231faf21abeca83cdfae628c78.jpg"
+                             class="d-block w-100" alt="...">
                     </div>
-                    <div>
-                        <span class="material-feed material-icons-outlined">turned_in_not</span>
+                    <div class="carousel-item">
+                        <img class="feed-img"
+                             src="https://images.mypetlife.co.kr/content/uploads/2021/12/06142637/sehee-park-473fli-b_Mo-unsplash-scaled-768x1024-2-edited.jpg"
+                             class="d-block w-100" alt="...">
                     </div>
                 </div>
-                <div class="feed-like">
-                    <p style="font-size: 14px"><b>좋아요 10개</b></p>
+                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+            <!--                피드 아이콘-->
+            <div class="feed-icon">
+                <div>
+                    <span class="material-feed material-icons-outlined">favorite_border</span>
+                    <span class="material-feed material-icons-outlined">mode_comment</span>
+                    <span class="material-feed material-icons-outlined">near_me</span>
                 </div>
-                <!--                피드내용이하-->
-                <div class="feed-content">
-                    <span class="feed-text" style="overflow:hidden; overflow:clip"><b> m_vely </b> 강아지 귀엽쥬? 🐶❤</span>
-                    <div class="feed-text-more">더 보기</div>
+                <div>
+                    <span class="material-feed material-icons-outlined">turned_in_not</span>
                 </div>
-                <div class="feed-reply">
-                    <p style="color: gray; cursor: pointer; margin-bottom: 10px"> 댓글 1000개 모두 보기</p>
-                    <p style="font-size: 10px"> 12시간 전</p>
+            </div>
+            <div class="feed-like">
+                <p style="font-size: 14px"><b>좋아요 10개</b></p>
+            </div>
+            <!--                피드내용이하-->
+            <div class="feed-content">
+                <span class="feed-text" style="overflow:hidden; overflow:clip"><b> m_vely </b> 강아지 귀엽쥬? 🐶❤</span>
+                <input value="더보기"
+                       onclick="if(this.parentNode.getElementsByTagName('div')[0].style.display != ''){this.parentNode.getElementsByTagName('div')[0].style.display = '';this.value = '숨기기';}else{this.parentNode.getElementsByTagName('div')[0].style.display = 'none'; this.value = '더보기';}"
+                       type="button"
+                       style="border: none; cursor: pointer; background-color: transparent; color: #8a8a8a; font-size: 14px"/>
+                <div style="display: none; text-align: left;"> 제 강아지는 아니에요 ㅋㅎ</div>
+            </div>
+            <div class="feed-reply">
+                <p style="color: gray; cursor: pointer; margin-bottom: 10px"> 댓글 1000개 모두 보기</p>
+                <p style="font-size: 10px"> 12시간 전</p>
+            </div>
+            <hr>
+            <div class="comment" style="padding-left: 10px; display: flex;">
+                <div class="imoti" style="display: flex">
+                    <span class="material-icons-outlined" style="cursor: pointer">sentiment_satisfied </span>
+                    <input class="form-control form-control-sm"
+                           style="width: 460px; margin: 0px 0px 10px 20px; border: transparent;" type="text"
+                           placeholder="댓글 달기..">
                 </div>
-                <hr>
-                <div class="comment" style="padding-left: 10px; display: flex;">
-                    <div class="imoti" style="display: flex">
-                        <span class="material-icons-outlined" style="cursor: pointer">sentiment_satisfied </span>
-                        <input class="form-control form-control-sm"
-                               style="width: 460px; margin: 0px 0px 10px 20px; border: transparent;" type="text"
-                               placeholder="댓글 달기..">
-                    </div>
-                    <div>
-                        <span style="font-size: 14px; color: cornflowerblue; padding-right: 10px; cursor: pointer;"> <b> 게시 </b></span>
-                    </div>
+                <div>
+                    <span style="font-size: 14px; color: cornflowerblue; padding-right: 10px; cursor: pointer;"> <b> 게시 </b></span>
                 </div>
             </div>
         </div>
@@ -773,6 +773,7 @@
             </div>
         </div>
     </div>
+    <!--우측 피드영역-->
     <div class="right-body">
         <div class="feed-name" style="flex-direction: row;">
             <div class="big-profile-box">
